--- a/PromptHub.Web/PromptHub.Web.csproj
+++ b/PromptHub.Web/PromptHub.Web.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Include=".ai\0-project-highlevel.md" />
+    <None Include=".ai\1-prd.md" />
   </ItemGroup>
 
 </Project>
