--- a/PromptHub.Web/PromptHub.Web.csproj
+++ b/PromptHub.Web/PromptHub.Web.csproj
@@ -1,37 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>$(NoWarn);1591</NoWarn>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Content Remove="stylecop.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<Content Remove="stylecop.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include="stylecop.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="stylecop.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include=".ai\0-project-highlevel.md" />
-    <None Include=".ai\1-prd.md" />
-    <None Include=".ai\2-tech-stack.md" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<AdditionalFiles Include="stylecop.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <AdditionalFiles Include="stylecop.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Scripts\" />
+	</ItemGroup>
 
+	<ItemGroup>
+		<AdditionalFiles Include=".ai\*" />
+	</ItemGroup>
 </Project>
