--- a/PromptHub.Web/appsettings.json
+++ b/PromptHub.Web/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://{TENANT_NAME}.b2clogin.com/",
+    "Domain": "{TENANT_DOMAIN}",
+    "TenantId": "<YOUR_TENANT_ID>",
+    "ClientId": "<YOUR_CLIENT_ID>",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath": "/signout-callback-oidc",
+    "SignUpSignInPolicyId": "{USER_FLOW_NAME}"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
