--- a/PromptHub.Web/PromptHub.Web.csproj
+++ b/PromptHub.Web/PromptHub.Web.csproj
@@ -26,6 +26,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="MudBlazor" Version="8.15.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="2.*" />
+		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.*" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
