--- a/PromptHub.Web/PromptHub.Web.csproj
+++ b/PromptHub.Web/PromptHub.Web.csproj
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MudBlazor" Version="8.15.0" />
+		<PackageReference Include="Azure.Data.Tables" Version="12.9.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Identity.Web" Version="2.*" />
 		<PackageReference Include="Microsoft.Identity.Web.UI" Version="2.*" />
