--- a/PromptHub.Web/appsettings.json
+++ b/PromptHub.Web/appsettings.json
@@ -12,5 +12,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TableStorage": {
+    "ConnectionString": ""
+  },
   "AllowedHosts": "*"
 }
