Initial implementation of tags suggestion

--- a/PromptHub.Web/appsettings.json
+++ b/PromptHub.Web/appsettings.json
@@ -15,5 +15,14 @@
   "TableStorage": {
     "ConnectionString": ""
   },
+  "TagSuggestion": {
+    "AllowedTags": [
+      "blazor",
+      "azure",
+      "testing"
+    ],
+    "MaxSuggestions": 4,
+    "Model": "gpt-4o-mini"
+  },
   "AllowedHosts": "*"
 }
