--- a/PromptHub.Web/appsettings.json
+++ b/PromptHub.Web/appsettings.json
@@ -17,12 +17,32 @@
   },
   "TagSuggestion": {
     "AllowedTags": [
-      "blazor",
-      "azure",
-      "testing"
+      "agile",
+      "scrum",
+      "product-backlog",
+      "user-stories",
+      "acceptance-criteria",
+      "refinement",
+      "sprint-planning",
+      "daily-standup",
+      "sprint-review",
+      "retrospective",
+      "estimation",
+      "stakeholder-communication",
+      "requirements",
+      "architecture",
+      "code-review",
+      "devops",
+      "ci-cd",
+      "testing",
+      "qa",
+      "bug-triage"
     ],
     "MaxSuggestions": 4,
     "Model": "gpt-4o-mini"
+  },
+  "OpenAI": {
+    "ApiKey": "key"
   },
   "AllowedHosts": "*"
 }
